--- a/Public/MainPage.html
+++ b/Public/MainPage.html
@@ -1,42 +1,168 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html>
+<head>
     <meta charset="utf-8">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="MainPage.css">
-    <title></title>
-  <body>
-    <div id=header>
-
-      <div id='div1' class='d1'>
-        <a href="#"><strong>CQ</strong></a>
-        <span style="cursor:pointer;" ondblclick="functionNav()">
-      </div>
-      <div class="navbar"></div>
-      <div class="navbar"></div>
-      <div class="navbar"></div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+			margin: 0;
+            padding: 0;
+            background: #f5f5f5;
+            height: 100vh;
+            font-family: 'Roboto', sans-serif;
+            overflow-y:hidden;
+		}
+		nav {
+            width:100%;
+			height: 60px;
+			background-color: #222D3C;
+            color: #fff;
+		}
+		nav p {
+			margin: 0;
+			font-size: 30px;
+			padding: 10px;
+			float: left;
+		}
+		nav span {
+			padding: 20px;
+			font-size: 16px;
+			float: right;
+		}
+		nav img {
+			float: right;
+			border-radius: 50%;
+			padding: 15px;
+        }
+		#menu {
+			background-color: #222D3C;
+			width: 50px;
+			transition-property: width;
+			transition-duration: 0.7s;
+            box-sizing: border-box;
+            float: left;
+            height:100vh;
+		}
+		.fa {
+			color: #fff;
+			font-size: 25px;
+			width: 30px;
+			margin: 6px 15px;
+			margin-left: 11px;
+			box-sizing: border-box;
+		}
+		#menu span {
+			display: none;
+		}
+		.menu-item {
+			cursor: pointer;
+			opacity: 0.8;
+			color: #fff;
+			font-family: sans-serif;
+			font-size: 14px;
+		}
+		.menu-item:hover {
+			border-left: 2px solid red;
+			opacity: 1;
+			background-color: #4d5866;
+		}
+        #user_icon{
+            height:100%;
+            width: 10%;
+        }
+        #body_internal_div{
+            margin-left:15%;
+            margin-top: 5%;
+            height: 500px;
+            width: 70%;
+            box-shadow: 0px 1px 10px 0px rgb(150, 150, 150);
+        }
+        #body_internal_profile_div{
+            width: 100%;
+            height:30%;
+            line-height: 30%;
+        }
+        #user_icon{
+            padding: 25px;
+            font-size: 100px;
+        }
+        #fields_outer_div{
+            height:70%;
+            width: 100%;
+        }
+        .outer_div{
+            height:22%;
+            margin-left:2%;
+            margin-top: 2%;
+            width:47%;
+            text-align: center;
+            float: left;
+            border: 1px solid #B0B0B0;
+        }
+        .div_inner_1{
+            background:#dfdfdf;
+            height:55%;
+        }
+        .div_inner_2{
+            height:45%;
+        }
+    </style>
+</head>
+<body>
+    <div id="body_internal_div">
+        <div id="body_internal_profile_div"><span><i class="far fa-user" id="user_icon"></i></span></div>
+        <div id="fields_outer_div">
+            <div class="outer_div">
+                <div class="div_inner_1"><span class="spans">Email</span></div>
+                <div class="div_inner_2"></div>
+            </div>
+            <div class="outer_div">
+                <div class="div_inner_1">Gender</div>
+                <div class="div_inner_2"></div>
+            </div>
+            <div class="outer_div">
+                <div class="div_inner_1">Name</div>
+                <div class="div_inner_2"></div>
+            </div>
+            <div class="outer_div">
+                <div class="div_inner_1">City</div>
+                <div class="div_inner_2"></div>
+            </div>
+            <div class="outer_div">
+                <div class="div_inner_1">D.O.B</div>
+                <div class="div_inner_2"></div>
+            </div>
+            <div class="outer_div">
+                <div class="div_inner_1">Phone</div>
+                <div class="div_inner_2"></div>
+            </div>
+        </div>
     </div>
-
-
-    <div id='div2' class='d2'>
-    <a href="#">CQ</a>
-    <a href="#">Home</a>
-    <a href="#">Add User</a>
-    <a href="#">Community List</a>
-    <a href="#">Switch As User</a>
-    <a href="#">Tag Panel</a>
-    <a href="#">Change Password</a>
-    <a href="#">Logout</a>
-    <div>
-
-  </body>
+</body>
 <script>
-  function functionNav(){
-    var div2=document.getElementById("div2");
-    if(div2.style.width=='')
-     div2.style.width='px';
-    else
-      div2.style.width='';
-  }
+    var menu = document.getElementById("menu");
+    var sideBtn = document.getElementById("sideBtn");
+    var body = document.getElementById("body_internal_div");
+	var span = menu.getElementsByTagName("span");
+	sideBtn.addEventListener("click", function () {
+		if(menu.style.width == '300px') {
+			menu.style.width = '50px';
+			for(var i = 0;i<span.length;i++) {
+				span[i].style.display = 'none';
+			}
+		} else {
+			menu.style.width = '300px';
+			setTimeout(function () {
+				for(var i = 0;i<span.length;i++) {
+					span[i].style.display = 'inline';
+				}
+			}, 210);
+		}
+	})
 </script>
 </html>
