--- a/Public/Login.html
+++ b/Public/Login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>CQ</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="LoginStyle.css">
@@ -17,7 +17,7 @@
             <div id='login_body_text'>Login Into Your Account</div>
             <form>
                 <input type='text' placeholder="Username" class='input_field' id='username_input'>
-                <input type='text' placeholder="Password" class='input_field' id='password_input'><br>
+                <input type='password' placeholder="Password" class='input_field' id='password_input'><br>
                 <button type="button" id='login_button'>Login</button>
             </form>
         </div>
