[Updated CSS, Login Page and added Manage Community Page]

--- a/Public/Login.html
+++ b/Public/Login.html
@@ -23,7 +23,7 @@
             </form>
         </div>
         <div id="sign_in_with_div">
-            <div id='sign_in_text_div'>Sign in with</div>
+            <div id='sign_in_text_div'>Sign in With</div>
             <div id="sign_in_body_div">
                 <div id="github_body_div">
                         <i class="fa fa-github" style="font-size:48px;"></i>
